# nufft

./: .gitignore  nufft.sty  refs.bib  todo.org
derivation/: Makefile  derivation.tex  paper.bib  paper.tex  sec-S-R-factorizations.tex  sec-bandlimiting.tex  sec-error-analysis.tex  sec-introduction.tex  sec-kernel-interp.tex  sec-test-series.tex  sec-translation-operators.tex
notes/: cmconv.tex
paper/: Makefile  paper.tex
paper/tex/: appendix.tex  c0.tex  checkpoint-distribution.tex  error-analysis.tex  fmm.tex  main-algorithm.tex  nufft.tex  numerical-results.tex  periodic-summation.tex  vandermonde.tex
poster/: Makefile  pirl_logo.tex  poster.tex  test.tex  umcp_seal.pdf_tex
presentation/: Makefile  presentation.tex
proposal/: Makefile  proposal.bib  proposal.tex
scratch/: chebyshev-interpolation.nb  interpolating-ln-cos.nb
src/cpp/: CMakeLists.txt  Makefile  bookmarks.cpp  bookmarks.hpp  bookmarks.impl.hpp  bookmarks.test.cpp  cauchy.cpp  cauchy.hpp  cauchy.impl.hpp  cauchy.test.cpp  complex.hpp  complex.impl.hpp  fmm.cpp  fmm.hpp  fmm1d.cpp  fmm1d.hpp  fmm1d.impl.hpp  fmm1d.perf.cpp  fmm1d.test.cpp  fmm1d.test.jl  fmmmodule.c  index_manip.cpp  index_manip.hpp  index_manip.impl.hpp  index_manip.test.cpp  math.hpp  math.test.cpp  multiply.hpp  nufft.cpp  nufft.hpp  nufft.impl.hpp  nufft.perf.cpp  nufft.test.cpp  preprocessor.hpp  source_coefs.hpp  source_coefs.impl.hpp  source_coefs.test.cpp  stencils.hpp  stencils.impl.hpp  stencils.test.cpp  (+5 more)
src/jl/: INFFT_interp_trial.jl  binsort.jl  fmm1d.jl  groundtruth.jl  nufft.jl  numexp__fmm_speed.jl  numexp__interp_speed.jl  numexp__test_series.jl  paper__make_test_series_plots.jl  periodicsum.jl  testseries.jl  util.jl
src/jl/test/: run_all_tests.jl
src/jl/test/derivation/: test__derivation.jl  test__derivation_2.jl
src/jl/test/fmm1d/: test__fmm1d_cauchy__do_E4_SR_translations.jl  test__fmm1d_cauchy__do_RR_translations.jl  test__fmm1d_cauchy__evaluate_Phi.jl  test__fmm1d_cauchy__fmm.jl  test__fmm1d_cauchy__fmm_scaling.jl  test__fmm1d_cauchy__fmm_unsorted_input.jl  test__fmm1d_cauchy__get_RR_matrix.jl  test__fmm1d_cauchy__get_SR_matrix.jl  test__fmm1d_cauchy__get_finest_farfield_coefs.jl  test__fmm1d_cauchy__get_parent_farfield_coefs.jl  test__fmm1d_cauchy__merge_child_ffes.jl
src/jl/test/interp/: test__nufft_interp__inverse.jl
src/jl/test/periodicsum/: test__periodicsum__test_1.jl
src/jl/test/testseries/: test__testseries__semicircle.jl
src/m/: Makefile  plotall.m  save_as_eps.m
src/py/: .gitignore  Makefile  _fmm.py  find_cmake_output.sh  find_libfmm.sh  fmm.py  fmm_build.py  groundtruth.py  make_plots.py  manual_c.py  nufft.py  plot.py  sanitycheck.py  test_fmm.py  test_interp.py  testseries.py  util.py
src/py/new/: Makefile  _nfft.py  _nufft_greengard.py  build_nfft.py  build_nufft.py  build_nufft_greengard.py  checkvals.py  fmm.py  gen_error_bound_data.py  gen_l2_and_linf_error_data.py  gen_optL_data.py  gen_radian_diff_data.py  gen_testfunc_data.py  gen_timings_data.py  groundtruth.py  irt.py  libnfft_timer.dylib  nfft.py  nfft_timer_test.py  nufft.py  nufft_greengard.py  plot.py  testfunc.py  timings.npz  util.py
src/py/new/nfft_timer/: CMakeLists.txt
src/py/new/nfft_timer/src/: nfft_timer.cpp  nfft_timer.hpp  nfft_wrapper.c  nfft_wrapper.h
src/tex/: nufft.sty  refs.bib
src/tex/paper/: paper.tex
src/tex/paper/sections/: appendix.tex  c0.tex  checkpoint-distribution.tex  complexity.tex  error-analysis.tex  fmm.tex  future-work.tex  introduction.tex  main-algorithm.tex  nufft.tex  numerical-results.tex  periodic-summation.tex
src/tex/paper/tex/: abstract.tex  checkpoint-distribution.tex  fmm.tex  future-work.tex
src/tex/poster/: directtimes.txt  fmmtimes.txt  gtavg.txt  persumavg.txt
src/tex/tikz/: error_bound_plot.tex  l2_error_plot.tex  linf_error_plot.tex  optL_plot.tex  periodic-summation.tex  radian_diff_plot.tex  testfunc_plot.tex  timings_plot.tex
src/tex/writeup/: Makefile  sec-S-R-factorizations.tex  sec-abstract.tex  sec-error-analysis.tex  sec-future-work.tex  sec-kernel-interp.tex  sec-numerical-results.tex  sec-periodic-summation.tex  sec-test-series.tex  sec-todo.tex
tikz/: fmm.tex
writeup/: Makefile  header.tex  sec-S-R-factorizations.tex  sec-abstract.tex  sec-algorithms.tex  sec-bandlimiting.tex  sec-complexity.tex  sec-error-analysis.tex  sec-fmm-scaling.tex  sec-future-work.tex  sec-kernel-interp.tex  sec-numerical-results.tex  sec-periodic-summation.tex  sec-todo.tex  sec-translation-operators.tex  writeup.tex
